// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Runtime wrapCodeInModuleWrapper generates the correct args for the module wrapper 1`] = `
"({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest){module.exports = "Hello!"
}});"
`;

exports[`Runtime wrapCodeInModuleWrapper injects "extra globals" 1`] = `
"({"Object.<anonymous>":function(module,exports,require,__dirname,__filename,jest,Math){module.exports = "Hello!"
}});"
`;
